@@ -904,6 +904,7 @@ typedef struct _ewin
    int                 icon_pmap_w, icon_pmap_h;
    Pixmap              icon_pmap, icon_mask;
    char                kde_hint;
+   int                 head;
 }
 EWin;
 
